<resources>
    <string name="app_name">QuizzY</string>
    <string name="initial_score">Score 0/10</string>
    <string name="option_A"></string>
    <string name="option_B"></string>
    <string name="option_C"></string>
    <string name="option_D"></string>
    <string name="correct_toast">You Got it!</string>
    <string name="wrong_toast">Wrong!</string>
    <string name="question_1">Sachin Tendulkar made his One day debut in...</string>
    <string name="option_1A">A) Australia</string>
    <string name="option_1B">B) England  </string>
    <string name="option_1C">C) Pakistan </string>
    <string name="option_1D">D) Sri Lanka</string>
    <string name="question_2">Who is India’s present Test captain?</string>
    <string name="option_2A">A) MS Dhoni    </string>
    <string name="option_2B">B) Virat Kohli </string>
    <string name="option_2C">C) Murali Vijay</string>
    <string name="option_2D">D) Rohit Sharma</string>
    <string name="question_3">Which team has won the Cricket world cup for the maximum number of times</string>
    <string name="option_3A">A) Australia  </string>
    <string name="option_3B">B) England    </string>
    <string name="option_3C">C) New Zealand</string>
    <string name="option_3D">D) India      </string>
    <string name="question_4">Which team is hosting Cricket World Cup 2019</string>
    <string name="option_4A">A) Australia   </string>
    <string name="option_4B">B) West Indies </string>
    <string name="option_4C">C) South Africa</string>
    <string name="option_4D">D) England     </string>
    <string name="question_5">Standard cricket bats are made of</string>
    <string name="option_5A">A) Pine Wood  </string>
    <string name="option_5B">B) Willow Wood</string>
    <string name="option_5C">C) Teak Wood  </string>
    <string name="option_5D">D) Deodar Wood</string>
    <string name="question_6">Who has scored the most runs in a single First-class innings?</string>
    <string name="option_6A">A) Hanif Mohammad</string>
    <string name="option_6B">B) Brian Lara</string>
    <string name="option_6C">C) Bradman</string>
    <string name="option_6D">D) Tendulkar</string>
    <string name="question_7">\'Dizzy\' is the nickname of what Australian player?</string>
    <string name="option_7A">A) McGrath</string>
    <string name="option_7B">B) Gilchrist</string>
    <string name="option_7C">C) Brett Lee</string>
    <string name="option_7D">D) Gillespie</string>
    <string name="question_8">Which was the 1st non Test playing country to beat India in an international match?</string>
    <string name="option_8A">A) Canada</string>
    <string name="option_8B">B) Sri Lanka</string>
    <string name="option_8C">C) Zimbabwe</string>
    <string name="option_8D">D) Ireland</string>
    <string name="question_9">Which player has scored the most runs in a single Test innings?</string>
    <string name="option_9A">A) Ankit</string>
    <string name="option_9B">B) Agarkar</string>
    <string name="option_9C">C) Brian Lara</string>
    <string name="option_9D">D) Sehwag</string>
    <string name="question_10">Where did India play its 1st one day international match?</string>
    <string name="option_10A">A) Headingley</string>
    <string name="option_10B">B) Taunton</string>
    <string name="option_10C">C) The Oval</string>
    <string name="option_10D">D) Lords</string>


</resources>
